--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,9 +25,10 @@ if (flutterVersionName == null) {
 android {
     namespace "com.softly.finance"
     compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
+    ndkVersion = "27.0.12077973" // Add this line
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -82,6 +83,7 @@ flutter {
 
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
